fix: adiciona position relative e z-index no btn-whatsapp

--- a/css/site.css
+++ b/css/site.css
@@ -157,6 +157,8 @@ input.busca{
     justify-content: center;
     align-items: center;
     gap: 8px;
+    position:relative;
+    z-index: 2;
 }
 
 .btn-secundario{
